# Bachaterio

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/bot/: __main__.py  states.py
src/bot/dialogs/: base.py
src/bot/dialogs/choose_date/: __init__.py  dialogs.py  handlers.py
src/bot/dialogs/dance_dialog/: __init__.py  dialogs.py  getters.py  handlers.py
src/bot/dialogs/edit_lesson/: __init__.py  dialogs.py  getters.py  handlers.py
src/bot/dialogs/info_dialog/: __init__.py  dialogs.py  getters.py
src/bot/dialogs/manage_user/: __init__.py  dialogs.py  getters.py  handlers.py
src/bot/dialogs/menu_dialog/: __init__.py  dialogs.py  getters.py  handlers.py
src/bot/dialogs/rules_dialog/: __init__.py  dialogs.py  handlers.py
src/bot/dialogs/superintend_dialog/: __init__.py  dialogs.py  getters.py  handlers.py
src/bot/dialogs/update_user_level/: __init__.py  dialogs.py  getters.py  handlers.py
src/bot/dialogs/watch_config/: __init__.py  dialogs.py  getters.py  handlers.py
src/bot/dialogs/watch_lesson/: __init__.py  dialogs.py  getters.py  handlers.py
src/bot/enums/: __init__.py  filters.py  lesson.py  practice.py  user.py
src/bot/handlers/: apprentice.py  base.py  commands.py  dance.py  errors.py  info.py  loader.py  manage.py
src/bot/keyboards/: __init__.py  command.py  dance.py  loader.py  manage.py  practice.py
src/bot/models/: __init__.py  base.py  suggestion.py  tutorial.py  user.py
src/bot/utils/: __init__.py  auth.py  convert_bytes.py
src/bot/views/: commands.py
src/infrastructure/: config_reader.py  logger_builder.py
src/infrastructure/database/: __init__.py  mongo.py  redis.py
