# Base
[tool.poetry]
name = "Bachaterio"
version = "1.4.2"
description = "I'm the Keeper of Bachata Knowledge"
authors = ["Aleksey Strelkov <aleks.strel.8v@gmail.com>"]


# System
[tool.poetry.dependencies]
python = "^3.11"


# App deps
[tool.poetry.group.app]
optional = true

[tool.poetry.group.app.dependencies]
aiogram = "3.0.0"
aiogram3-calendar = "^0.1.2b1"
aiogram-dialog = "^2.0.0"
pydantic-settings = "^2.0.3"
redis = "^4.3.4"
pymongo = "^4.5.0"


# Local deps
[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
Flake8-pyproject = "^1.1.0"
black = { version = "^22.8.0", allow-prereleases = true }
isort = "^5.10.1"
mypy = "^0.981"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# Configs
## Linters
[tool.isort]
profile = "black"
line_length = 120
lines_after_imports = 2
lines_between_types = 0

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = ["F405", "W503", "W605"]

[tool.mypy]
check_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
